# Practices

./: .clang-format  .gitignore  README.md  generate_random_array.py  makefile  readme.md  test_combination.cpp  test_permutation.cpp  test_pimpl.cpp  test_pimpl.h  test_printheap.c  test_stl.cpp
algorithms/: README.md  binary-tree2.cpp  longest-substring-without-repeating-characters.c  problems.txt  string-search-using-finite-automaton.c
csapp/: test_echo_server.cpp
gtest/: gmock_demo.cpp  gtest_demo.cpp
inter-fucking-view/: README.md
interview/: overlapping-closed-interval.c
interview2/2019-05-30/: complex.cpp  utils.hpp
leetcode/: generate.py  median-of-two-sorted-arrays.c  palindrome-linked-list.c  rolling-hash-with-modulo-is-right.py  string-to-integer-atoi.c  two-sum.c
lib/: binary_search.c  bubble_sort.c  combination.cpp  csapp_cxx.cpp  encoding.cpp  encoding.h  exceptions.h  graph.cpp  graph.h  heapsort.c  insert_sort.c  libc.h  libcxx.h  linked_list.h  list.h  log.h  mergesort.c  permutation.c  permutation.cpp  printer.hpp  printheap.c  quicksort.c  socket.cpp  socket.h  string-matching.cpp  string-matching.h  string_matching_c.c  strlist.h  tcp.cpp  tcp.h  tree.c  tree.h  udp.h  utils.c  yaalgorithms.hpp
massive-data/: pick-N-from-an-array-of-M-weighted-items.cppx
native/: .clang-format  CMakeLists.txt  makefile
native/algorithms/: 24r.c  longest-palindromic-substring.c  palindrome-number.c  powx-n.c  readme.md  reverse-integer.c
native/kernel/helloworld/: Makefile
native/lib/: encoding.h  graph.cpp  graph.h  gtest.hpp  heap.c  leetcode.cpp  leetcode.h  libc.h  libcxx.h  linked_list.c  printer.hpp  select_sort.c  socket.h  string-matching.hpp  strlist.h  tcp.cpp  tcp.h  tree.hpp  udp.cpp
native/others/: README.md
native/others/pos1/: makefile
native/playground/: 2EWD.txt  find-kth-largest-number-using-qsort.c  longest-common-prefix.c  longest-common-subsequence.c  longest-non-increasing-subarray.c  test_broadcast_address_calculation.cpp  test_localip.cpp  test_predict_the_winner.cpp  test_predict_the_winner_2.cpp  test_tree.cpp  test_udpserver.cpp  test_unicodes.cpp
native/system/: test_client.cpp  test_daemon.c  test_epoll.cpp  test_localip2.cpp  test_tcp_dialog.cpp
native/test/: linked-list-cycle.c  reverse-string.c  rolling-hash-with-modulo-is-right.py  simple_graph_1.txt  test_anything_else.cpp  test_argp.c  test_binary_search.c  test_binary_tree.c  test_combination_sum_ii.cpp  test_combination_sum_iii  test_combination_sum_iii.cpp  test_creation_of_entities.cpp  test_dd2.cpp  test_enable_if.cpp  test_function.cpp  test_getopt_long  test_getopt_long.c  test_graph.cpp  test_hashlimit.c  test_hashlimit_macros.c  test_inplace.cpp  test_kmp.cpp  test_lc_clockwise_print_matrix.cpp  test_lc_merge_links.cpp  test_linked_list.c  test_linux_brain_fuck_macroes.c  test_linux_list.c  test_merge_k_sorted_linked_list.cpp  test_nic.c  test_permutation.cpp  test_pthread.c  test_reverse_linked_list.cpp  test_shortest_blabla.c  test_skip_list.cpp  test_sorting.c  test_stl.cpp  test_string_matching_c.c  test_strlist.c  test_struct_assign.c  test_top_k_frequent_elements.cpp
native/trade/: README.md
native/trade/e1/: README.md
native/trade/libssh-example/: CMakeLists.txt  sftp-client.cpp  sftp-client.h  test.cpp
others/pos1/: test_matrix_multiplication.cpp
rivendell/: dynamic_cast.cpp  makefile  virtual-2.cpp  vtable.cpp
rust-lang/: hello-world
rust-lang/adder/: Cargo.toml
rust-lang/algorithms/: Cargo.toml
rust-lang/guessing/: Cargo.toml
rust/algorithms/: Cargo.toml
system/: test_client.cpp  test_epoll.cpp  test_forking.cpp  test_select.cpp  test_server.cpp  test_tcp_dialog.cpp
take-home/2019-05-30/: .gitignore  aeparser.cpp  array2.hpp  matrix.hpp  triple.hpp
test/: test_enable_if.cpp  test_graph.cpp  test_linux_list.c  test_new.cpp  test_number_operations_with_arrays.cpp  test_socket1.cpp  test_string_matching.cpp  test_strlist.c
unclassified/: README.md
unclassified/ffmpeg/ffplay/: .gitignore  CMakeLists.txt  README.md  makefile
unclassified/ffmpeg/ffplay/include/: producer.h
unclassified/ffmpeg/ffplay/src/: audio_decoder.cpp  audio_decoder.h  audio_dev.cpp  audio_dev.h  cppdef.h  demuxer.cpp  demuxer.h  exception.h  ffplay.h  fftools_variables.c  frame.cpp  frame.h  frame_queue.cpp  frame_queue.h  ftf.cpp  ftf.h  log.h  packet.cpp  packet.h  packet_queue.cpp  packet_queue.h  parameters.hpp  utils.cpp  utils.h  video_state.cpp  video_state.h
unclassified/ffmpeg/ffplay/test/: CMakeLists.txt  def.h  sdl_thread.cpp  test0.cpp  test_container.cpp  test_utils.cpp
unclassified/ffmpeg/ffplay/test/c/: CMakeLists.txt  ffplay.c
unclassified/hook/: CMakeLists.txt  README.MD  authentic.c  hook.c  main.c
unclassified/lisp/: the-little-schemer.rkt
unclassified/log-injector/: injector.py  injector_test.py
unclassified/markdown-toc/: Makefile.in  README.md  configure  configure.ac
unclassified/markdown-toc/src/: Makefile.am  Makefile.in  encoding.cpp  encoding.h  test.md  test2.md  test3.md  toc.cpp
unclassified/parsing-techniques/: pushdown_automata.py  unger's_method.py
unclassified/shell-scripts/: an-attempt-on-git-pre-push.sh  remove-redundant-sdrs-from-kindle.sh
unclassified/tree-printer/: README.md  makefile  printheap.c  printheap.h  test_printheap.c  utils.c  utils.h
utils/: generate_random_ids.cpp
yacc/: a.y
yacc-lex/: .gitignore  ch3hdr.h  list.h  makefile  makefiletmpl  readme.md  strlist.h  u-2.l  u-2.y  u-3-infix2postfix.l  u-3-infix2postfix.y  u-4.l  u-4.y  u-example1.l  u-example1.y
yacc-lex/lex/: .gitignore  cmdl1.l  cmdl1.ll  defines.h  filestat.l  filestat_symtab.l  makefile  reject.l  test1.l  use-cmdl  use-cml1ll.c
yacc-lex/reentrant-parser/: .gitignore  Makefile  parser.y  r  r.c  r.h  r2.c  r_parser.c  r_parser.h  r_parser.y  r_scanner.c  r_scanner.h  r_scanner.lex  scanner.lex
yacc-lex/with-autotools/: Makefile.in  configure  configure.ac
yet-another-kind-of-interview/: README.md
yet-another-kind-of-interview/2019-05-30/: aeparser.hpp  complex.hpp  test_aeparser.cpp
(+46 files in other folders)
